Closed
Bug 719878
Opened 14 years ago
Closed 14 years ago
AllFramesIter does not find all frames when the current segment contains only a native call
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: luke, Assigned: luke)
References
Details
Attachments
(1 file)
|
1.63 KB,
patch
|
sfink
:
review+
|
Details | Diff | Splinter Review |
It should continue on to the next segment, just like operator++.
Attachment #590237 -
Flags: review?(sphink)
Updated•14 years ago
|
Attachment #590237 -
Flags: review?(sphink) → review+
Comment 1•14 years ago
|
||
This doesn't really truly block bug 698580, but it trips an assertion if it snarfs some non-innermost frames out of the native stack that AllFramesIter is ignorant of.
Blocks: 698580
| Assignee | ||
Comment 2•14 years ago
|
||
Target Milestone: --- → mozilla12
Comment 3•14 years ago
|
||
Assignee: general → luke
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•