Bug 719878 - AllFramesIter does not find all frames when the current segment contains only a native call (r=sfink)